Fixed scrollbar issue, added small-header.png, updated lighting

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -14,9 +14,6 @@
 @import "./views/appView-3d.less";
 
 // @import url(http://fonts.googleapis.com/css?family=Roboto);
-html {
-  overflow-y: scroll;
-}
 
 html,
 h1,
@@ -51,7 +48,7 @@ a:link:hover {
 html {
   width: 100%;
   height: 100%;
-  overflow-y: hidden;
+  overflow-y: auto;
 }
 body {
   width: 100%;
