--- a/src/styles/views/mobile-navigation-bar.less
+++ b/src/styles/views/mobile-navigation-bar.less
@@ -59,9 +59,12 @@ ul.nav-list  {
 .side-header {
   color: @color-5;
   width: 80%;
-  height: 100px;
-  margin: auto;
-  background-image: url("/images/small-header.png");
+  max-height: 125px;
+  margin: 8px auto;
+}
+img.side-header-img {
+  max-height: 100%;
+  max-width: 100%;
 }
 hr.toolbar-hr {
   margin: 10px auto 16px auto;
